--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,9 +11,11 @@
 <body>
 
 <nav th:fragment="navigation">
+
     <a href="/cheese">List</a> |
     <a href="/cheese/add">Add</a> |
-    <a href="/cheese/remove">Remove</a>
+    <a href="/cheese/remove">Remove</a> |
+    <a href="/category">List Categories</a>
 </nav>
 
 </body>
