--- a/src/main/resources/templates/category/add.html
+++ b/src/main/resources/templates/category/add.html
@@ -11,9 +11,9 @@
     <form th:object="${category}" method="post">
 
         <div class="form-group" th:classappend="${#fields.hasErrors('name') ? 'has-error' : ''}" >
-            <label th:for="name">Name</label>
+            <label th:for="name">Category</label>
             <input type="text" class="form-control" th:field="*{name}"/>
-            <span th:errors="*{name}"></span>
+            <span th:errors="*{name}" class="error"></span>
         </div>
         <input type="submit" value="Add Category" />
     </form>
