--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -23,12 +23,13 @@
         <td th:text="${cheese.name}"></td>
         <td th:text="${cheese.description}"></td>
         <td th:text="${cheese.category.name}"></td>
-        <td><a th:href="@{'/cheese/edit/' + ${cheese.id}}">edit</a></td>
+       <!-- <td><a th:href="@{'/cheese/edit/' + ${cheese.id}}">edit</a></td>-->
     </tr>
 
 </table>
-
-<nav th:replace="fragments :: cheesenavigation"></nav>
-
+<nav>
+    <a href="/cheese/add">Add</a> |
+    <a href="/cheese/remove">Remove</a>
+</nav>
 </body>
 </html>
