--- a/src/main/resources/templates/category/add.html
+++ b/src/main/resources/templates/category/add.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-
 <body class="container">
+<h1 th:text="${title}">Default Title</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
+<form method="post" th:object="${category}">
+    <div class="form-group">
+        <label th:for="description">Name</label>
+        <input class="form-control" th:field="*{name}" />
+        <span th:errors="*{name}" class="error"></span>
+    </div>
+    <input type="submit" value="Add Category" />
 
-<div class="container body-content">
-
-    <form th:object="${category}" method="post">
-
-        <div class="form-group" th:classappend="${#fields.hasErrors('name') ? 'has-error' : ''}" >
-            <label th:for="name">Category</label>
-            <input type="text" class="form-control" th:field="*{name}"/>
-            <span th:errors="*{name}" class="error"></span>
-        </div>
-        <input type="submit" value="Add Category" />
-    </form>
-
-</div>
+</form>
 
 </body>
 </html>
