--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -19,17 +19,26 @@
         <th>Edit</th>
     </tr>
 
-    <tr th:each="cheese : ${cheeses}">
+    <!--<tr th:each="cheese : ${cheeses}">
         <td th:text="${cheese.name}"></td>
         <td th:text="${cheese.description}"></td>
-        <td th:text="${cheese.category.name}"></td>
-       <!-- <td><a th:href="@{'/cheese/edit/' + ${cheese.id}}">edit</a></td>-->
+        <td th:text="${cheese.category.name()}"></td>
+       <td><a th:href="@{'/cheese/edit/' + ${cheese.id}}">edit</a></td></tr>-->
+
+    <tr th:each="cheese : ${cheeses}">
+        <td><a th:href="'cheese/edit/' + ${cheese.id}" th:text="Edit"></a></td>
+        <td th:text="${cheese.name} + ' (' + ${cheese.id} + ')'"></td>
+        <td th:text="${cheese.description}"></td>
+        <!--<td th:text="${cheese.category.Name}"></td>-->
     </tr>
 
 </table>
 <nav>
-    <a href="/cheese/add">Add</a> |
-    <a href="/cheese/remove">Remove</a>
+   <!-- <a href="/cheese/add">Add</a> |
+    <a href="/cheese/remove">Remove</a>-->
+    <a th:href="@{cheese/add}">Add</a> |
+    <a th:href="@{cheese/remove}">Remove</a>
+
 </nav>
 </body>
 </html>
