--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -18,9 +18,9 @@
 </nav>-->
 
 <nav th:fragment="navigation">
-    <a href="/cheese">Home</a> |
+    <a href="/cheese/">Home</a> |
     <a href="/category">Categories</a> |
-    <a href="/menu">Menus</a>
+    <a href="/menu">Menu</a>
 </nav>
 
 
