--- a/src/main/resources/templates/menu/add-item.html
+++ b/src/main/resources/templates/menu/add-item.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
     <head th:replace="fragments :: head"></head>
-
     <body class="container">
-
         <h1 th:text="${title}">Default Title</h1>
 
         <nav th:replace="fragments :: navigation"></nav>
 
-        <div class="container body-content">
+        <form method="post" style="max-width:600px;" th:object="${form}" action="/menu/add-item">
+            <div class="form-group">
+                <label th:for="cheeseId">Cheese</label>
+                <select name="cheeseId">
+                    <option th:each="cheese : *{cheeses}"
+                            th:text="${cheese.name}"
+                            th:value="${cheese.id}">
+                    </option>
+                </select>
+                <span th:errors="*{cheeses}" class="error"></span>
+            </div>
 
-            <form th:object="${form}" method="post" action="/menu/add-item">
-                <div class="form-group">
-                    <label th:for="cheeseId">Cheese</label>
-                    <select name="cheeseId">
-                        <option th:each="cheese: *{cheeses}"
-                                th:value="${cheese.id}"
-                                th:text="${cheese.name}"></option>
-                    </select>
+            <input type="hidden" name="menuId" th:value="*{menu.id}" />
 
-                    <input type="hidden" name="menuId" th:value="*{menu.id}" />
-                </div>
-
-                <input type="submit" value="Add Cheese" />
-            </form>
-
-        </div>
+            <input type="submit" value="Add Cheese to Menu" />
+        </form>
 
     </body>
 </html>
