--- a/src/main/resources/templates/menu/index.html
+++ b/src/main/resources/templates/menu/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-    <head th:replace="fragments :: head"></head>
+    <head th:replace="fragments :: head">
+    </head>
 
     <body class="container">
-
         <h1 th:text="${title}">Default Title</h1>
 
         <nav th:replace="fragments :: navigation"></nav>
 
+        <br />
+
         <ul>
-            <li th:each="menu: ${menus}">
-                <a th:href="@{'/menu/view/' + ${menu.id}}" th:text="${menu.name}"></a>
+            <li th:each = "menu : ${menus}">
+                <a th:href="'/menu/view/' + ${menu.id}" th:text="${menu.name}"></a>
             </li>
         </ul>
 
-        <a th:href="@{'/menu/add/'}">Add Menu</a>
+        <a href="menu/add">Add</a>
 
     </body>
 </html>
