--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -4,12 +4,12 @@
 
     <body class="container">
 
-        <h1 th:text="${title}">Default Title</h1>
+        <h1 th:text="${menu.name}">Default Title</h1>
 
         <nav th:replace="fragments :: navigation"></nav>
 
         <ul>
-            <li th:each="cheese: ${menu.cheeses}" th:text="${cheese.name}"></li>
+            <li th:each="cheese: ${cheeses}" th:text="${cheese.name}"></li>
         </ul>
 
         <p><a th:href="'/menu/add-item/' + ${menu.id}">Add Cheese</a></p>
