added some functionality

--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -36,8 +36,8 @@
 <nav>
    <!-- <a href="/cheese/add">Add</a> |
     <a href="/cheese/remove">Remove</a>-->
-    <a th:href="@{cheese/add}">Add</a> |
-    <a th:href="@{cheese/remove}">Remove</a>
+    <a th:href="@{/cheese/add}">Add</a> |
+    <a th:href="@{/cheese/remove}">Remove</a>
 
 </nav>
 </body>
