--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -12,7 +12,7 @@
             <li th:each="cheese: ${cheeses}" th:text="${cheese.name}"></li>
         </ul>
 
-        <p><a th:href="'/menu/add-item/' + ${menu.id}">Add Cheese</a></p>
+        <p><a th:href="'/menu/add-item/' + ${menu.id}">Add Item</a></p>
 
     </body>
 </html>
